--- a/web practice/style.css
+++ b/web practice/style.css
@@ -1,27 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap');
 *{
-    margin: 0;
     padding: 0;
+    margin: 0;
+    font-family: 'Mochiy Pop One', sans-serif;
     box-sizing: border-box;
+ 
+    
 }
-body{
-    background: aliceblue;
+.wrapper{
+    width:100vh;
+    height: 100vh;
+    background-color: rgba(95, 95, 95, 0.39);
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-
-.myrightctn{
-    position:relative;
-    background-image:linear-gradient(30deg,pink,purple) ;
-    height: 500px;
-    border-radius: 15px;
-    padding: 25px;
-    font-size:12px ;
-   
+.modalform{
+    width:400px;
+    min-height: 66%;
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
 }
-.myleftctn{
-    position: relative;
-    background-image: linear-gradient(45deg,orange,yellow);
-    height: 500px;
-    border-radius: 15px;
-    padding: 25px;
-    font-size:12px ;
+.actionbtn{
+    width: 80%;
+    background-color: royalblue;
+    margin: 2em;
+    display: flex;
+    justify-content: center;
+    
 }
